// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@top-navigation-bar/action * action/is last item check (false) 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    icon={[Function]}
    isLastItem={false}
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/is last item check (true) 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    icon={[Function]}
    isLastItem={true}
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/on press check 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    icon={[Function]}
    onPress={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/with icon uri 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    icon={[Function]}
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/appearance: title-centered 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    appearance="title-centered"
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/subtitle 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    subtitle="Subtitle"
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/title 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/with actions 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitleColor": "text-primary-inverse",
              "subtitleFontSize": 12,
              "subtitleFontWeight": "400",
              "textAlign": "start",
              "titleColor": "text-primary-inverse",
              "titleFontSize": 16,
              "titleFontWeight": "600",
            },
          },
          "titleCentered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "titleCentered": Object {
              "default": false,
            },
          },
          "parameters": Object {
            "backgroundColor": Object {
              "type": "string",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
            "subtitleColor": Object {
              "type": "string",
            },
            "subtitleFontSize": Object {
              "type": "number",
            },
            "subtitleFontWeight": Object {
              "type": "string",
            },
            "textAlign": Object {
              "type": "string",
            },
            "titleColor": Object {
              "type": "string",
            },
            "titleFontSize": Object {
              "type": "number",
            },
            "titleFontWeight": Object {
              "type": "string",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearances": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "tintColor": "white",
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "tintColor": Object {
              "type": "string",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variantGroups": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    leftControl={
      <ActionMock
        icon={[Function]}
        onPress={[MockFunction]}
        testID="@top-navbar-left"
      />
    }
    rightControls={
      Array [
        <ActionMock
          icon={[Function]}
          onPress={[MockFunction]}
          testID="@top-navbar-right-1"
        />,
        <ActionMock
          icon={[Function]}
          onPress={[MockFunction]}
          testID="@top-navbar-right-2"
        />,
        <ActionMock
          icon={[Function]}
          onPress={[MockFunction]}
          testID="@top-navbar-right-3"
        />,
      ]
    }
    subtitle="Subtitle"
    title="Test"
  />
</StyleProvider>
`;
